# quake2-rerelease-dll

./: meson.build
action/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile-tng  a_balancer.cpp  a_balancer.h  a_chase.cpp  a_cmds.c  a_cmds.cpp  a_doorkick.cpp  a_esp.c  a_esp.h  a_func.cpp  a_game.cpp  a_game.h  a_grapple.cpp  a_ini.cpp  a_items.cpp  a_match.h  a_spawn.cpp  a_stats.cpp  a_team.cpp  a_team.h  a_tourney.h  a_vote.cpp  a_vote.h  a_xcmds.cpp  a_xgame.cpp  a_xgame.h  a_xmenu.cpp  a_xmenu.h  a_xvote.cpp  a_xvote.h  ap_client.cpp  ap_view.cpp  ap_weapon.cpp  aq_shared.h  aq_utils.cpp  bg_local.h  g_cmds.cpp  (+13 more)
action/action/: a_cmds.c
action/rogue/: rogue_dm_tag.cpp
actionlite/: g_combat.cpp  g_local.h  game.h  p_client.cpp  p_move.cpp
rerelease/: CMakeLists.txt  cg_screen.cpp  g_main.cpp  g_save.cpp  game.vcxproj  mingw-w64-x86_64.cmake
rerelease/action/: Makefile  a_cmds.c  a_ctf.c  a_match.c  a_team.c  g_cmds.c  g_local.h  g_main.c  g_save.c  g_spawn.c  game.h  p_client.c  p_hud.c  p_view.c  q_shared.h
rerelease/bots/: bot_exports.h
